# src/app/routes/movimentacoes.js
@@ -34,6 +34,21 @@ routes.get(
 );
 
 routes.get(
+    '/movimentacoes/motivodevolvido',
+    MovimentacaoController.showMostReturnedReason
+    // #swagger.description = 'Listagem de Movimentações
+    // #swagger.tags = ['Movimentações']
+    // #swagger.security = [{JWT: []}]
+    /*
+       #swagger.responses[200] = {
+           schema: {
+               "$ref": "#/definitions/ListaDeMovimentacoes"
+           }
+       }
+    */
+);
+
+routes.get(
     '/movimentacoes/:id',
     MovimentacaoController.show
     // #swagger.description = 'Obtem uma movimentação pelo ID'
