# src/swagger_documentation.json
@@ -605,6 +605,50 @@
         ]
       }
     },
+    "/movimentacoes/produtomaisvendido": {
+      "get": {
+        "tags": [
+          "Movimentações"
+        ],
+        "description": "Listagem de Movimentações\r \n \n \n#swagger.tags = [",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/ListaDeMovimentacoes"
+            }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/movimentacoes/motivodevolvido": {
+      "get": {
+        "tags": [
+          "Movimentações"
+        ],
+        "description": "Listagem de Movimentações\r \n \n \n#swagger.tags = [",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/ListaDeMovimentacoes"
+            }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
     "/movimentacoes/{id}": {
       "get": {
         "tags": [
